tui/src/onboarding/snapshots/estelle_tui__onboarding__trust_directory__tests__renders_snapshot_for_git_repo.snap
---
source: tui/src/onboarding/trust_directory.rs
expression: terminal.backend()
---
> Working in /workspace/project

  Do you trust the contents of this directory? Working with untrusted
  contents comes with higher risk of prompt injection. Trusting the
  directory allows project-local config, hooks, and exec policies to
  load.

› 1. Yes, continue                                                    
  2. No, quit

  Press enter to continue
